[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/UI/ScoreTable.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/in_game.theme" type="Theme" id=2]
[ext_resource path="res://scripts/EndScoreOverlay.gd" type="Script" id=3]

[node name="CenterContainer" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 425.0
margin_top = 85.0
margin_right = 940.0
margin_bottom = 682.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 512.0
margin_bottom = 594.0
custom_constants/margin_right = 15
custom_constants/margin_top = 30
custom_constants/margin_left = 15
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 30.0
margin_right = 494.0
margin_bottom = 561.0

[node name="ScoreTable" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 479.0
margin_bottom = 325.0

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 479.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 40 )

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 385.0
margin_right = 479.0
margin_bottom = 453.0
focus_mode = 0
text = "Play Again"

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 463.0
margin_right = 479.0
margin_bottom = 531.0
focus_mode = 0
text = "Exit to Menu"
